# physics-engine

./: CMakeLists.txt
.github/workflows/: cmake_compile.yml  test.yml
include/math/: vec.hpp
src/graphics/: main.cpp
